--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple react redux express.js application",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "pug": "^2.0.0-rc.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
