--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   },
   "homepage": "https://github.com/andrew-rayco/memories#readme",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
