--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
