--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple react redux express.js application",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js & webpack --watch",
     "webpack": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
