--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
-    "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -34,6 +33,7 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "nodemon": "^1.12.1"
   }
 }
